** 2015.4.8 **

Fix error causing issues with multiple devices

2015.4.1a15

Do subnet broadcast to individual interfaces - fixes issues for devices with multiple interfaces
Improved logging

** 2015.3.30 **

Channel entry now accepts 'down' for '.' instead of 'select' and includes instructions to this effect
Added setting 'Show full detail on all guide items'
Fix for errors when no devices are found
Add handling for empty lineup
Improved icons on options dialog
Options dialog now auto-hides
After selecting a channel from a filtered list, focus is maintained on the channel when the list resets
Added channel changing via channel up/down buttons on remote (may not work - needs testing)
Organized first run control info by control type and removed some text

2015.3.26a1

Added options dialog with buttons for search, video settings, audio settings and volume control
Options dialog opens on context menu button or mouse right click
Options dialog also opens on move right or swipe left when the guide overlay is visible
Guide overlay now also opens/closes on swipe left/right
When 'Enable enhancements for touch devices' is enabled, all guide overlay items are now full detail even when not selected
Added first run dialog with basic control description

** 2015.3.25 **

Use more stable guide update method
Update guide every 55 to 65 minutes
On guide update failure, wait 5 minutes and try again - then return to normal interval
Fix for DeviceAuth being encoded with a trailing newline
Now logs addon version on startup

** 2015.3.20b1 **

Fix for error causing the addon to fail on startup when there is no guide data

***************
** 2015.3.19 **
***************
Initial public release
Retry fetching guide data if it fails on first attempt

** 2015.3.19a1 **

Fix for un-escaped URLs
Change name to 'HDHomeRun Live TV'
Get guide via https
Slightly darken currently playing background

** 2015.3.18 **

Use public guide data URL and DeviceAuth